; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux_mkv.c_get_highest_index_entry.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux_mkv.c_get_highest_index_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.demuxer = type { %struct.mkv_demuxer* }
%struct.mkv_demuxer = type { i32, %struct.TYPE_5__*, %struct.TYPE_4__**, i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* (%struct.demuxer*)* @get_highest_index_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @get_highest_index_entry(%struct.demuxer* %0) #0 {
  %2 = alloca %struct.demuxer*, align 8
  %3 = alloca %struct.mkv_demuxer*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  store %struct.demuxer* %0, %struct.demuxer** %2, align 8
  %8 = load %struct.demuxer*, %struct.demuxer** %2, align 8
  %9 = getelementptr inbounds %struct.demuxer, %struct.demuxer* %8, i32 0, i32 0
  %10 = load %struct.mkv_demuxer*, %struct.mkv_demuxer** %9, align 8
  store %struct.mkv_demuxer* %10, %struct.mkv_demuxer** %3, align 8
  %11 = load %struct.mkv_demuxer*, %struct.mkv_demuxer** %3, align 8
  %12 = getelementptr inbounds %struct.mkv_demuxer, %struct.mkv_demuxer* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 8
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %4, align 8
  store i32 0, i32* %5, align 4
  br label %18

18:                                               ; preds = %57, %1
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.mkv_demuxer*, %struct.mkv_demuxer** %3, align 8
  %21 = getelementptr inbounds %struct.mkv_demuxer, %struct.mkv_demuxer* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp slt i32 %19, %22
  br i1 %23, label %24, label %60

24:                                               ; preds = %18
  %25 = load %struct.mkv_demuxer*, %struct.mkv_demuxer** %3, align 8
  %26 = getelementptr inbounds %struct.mkv_demuxer, %struct.mkv_demuxer* %25, i32 0, i32 2
  %27 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %26, align 8
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %27, i64 %29
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %6, align 4
  %35 = icmp sge i32 %34, 0
  br i1 %35, label %36, label %56

36:                                               ; preds = %24
  %37 = load %struct.mkv_demuxer*, %struct.mkv_demuxer** %3, align 8
  %38 = getelementptr inbounds %struct.mkv_demuxer, %struct.mkv_demuxer* %37, i32 0, i32 1
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %38, align 8
  %40 = load i32, i32* %6, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i64 %41
  store %struct.TYPE_5__* %42, %struct.TYPE_5__** %7, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %44 = icmp ne %struct.TYPE_5__* %43, null
  br i1 %44, label %45, label %53

45:                                               ; preds = %36
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = icmp sgt i64 %48, %51
  br i1 %52, label %53, label %55

53:                                               ; preds = %45, %36
  %54 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  store %struct.TYPE_5__* %54, %struct.TYPE_5__** %4, align 8
  br label %55

55:                                               ; preds = %53, %45
  br label %56

56:                                               ; preds = %55, %24
  br label %57

57:                                               ; preds = %56
  %58 = load i32, i32* %5, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %5, align 4
  br label %18

60:                                               ; preds = %18
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  ret %struct.TYPE_5__* %61
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
